[package]
name = "nrf9160-rust-starter"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc.git" }
nrf-modem = { path = "../nrf-modem", features = ["defmt"] }
futures = { version = "0.3", default-features = false }
libm = "0.2.5"

embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
embassy-nrf = { version = "0", features = ["nightly", "nrf9160-ns", "unstable-pac", "time-driver-rtc1", "defmt", "unstable-traits", "time", "gpiote"] }
embassy-sync = { version = "0.2.0", features = ["nightly", "defmt"] }
embassy-futures = "0.1.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "d8c7c3f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "d8c7c3f" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "d8c7c3f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "d8c7c3f" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "d8c7c3f" }

[profile.release]
debug = true
lto = true
