[package]
name = "nrf9160-rust-starter"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc.git" }
nrf-modem = { version = "0.4.3", features = ["defmt"] }
futures = { version = "0.3", default-features = false }
libm = "0.2.5"

embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2" }
embassy-nrf = { version = "0.2.0", features = ["nrf9160-ns", "unstable-pac", "time-driver-rtc1", "defmt", "time", "gpiote"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = "0.1.1"

[profile.release]
debug = true
lto = true
