[package]
name = "nrf9160-rust-starter"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
tinyrlibc = "0.5.0"
nrf-modem = { version = "0.6.0", features = ["nrf9160", "defmt"] }
futures = { version = "0.3.31", default-features = false }
libm = "0.2.11"

embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2" }
embassy-nrf = { version = "0.2.0", features = ["nrf9160-ns", "unstable-pac", "time-driver-rtc1", "defmt", "time", "gpiote"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-futures = "0.1.1"

[profile.release]
debug = true
lto = true
